# profwatch

./: LICENSE  README.md  docker-compose.yml  mise.toml  next-steps.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/scrapers/: __init__.py  base.py  ufscar.py  unesp.py  unicamp.py  usp.py
backend/app/static/: index.html  style.css
