[project]
name = "profwatch"
version = "0.1.0"
description = "Backend para monitoramento de concursos"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "apscheduler",
    "httpx",
    "pydantic",
    "selectolax",
	"playwright"
]
